<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nature_background_with_sky_312839"
    android:orientation="vertical"
    tools:context=".MainPage">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nature_background_with_sky_312839"
        android:orientation="vertical"
        tools:context=".MainPage" />

    <LinearLayout
        android:id="@+id/LetsCatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/griffy"
            android:gravity="center"
            android:text="@string/lets_catch_the_butterfly"
            android:textColor="#F83C01"
            android:textSize="35sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LetsCatch"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/griffy"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#070707"
            android:textSize="35sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#FFEB3B"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/easy_level"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#F803FD0D"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/medium_level"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/buttonHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="#FA0202"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/hard_level"
            android:textColor="@color/black"
            android:textSize="15sp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/bottom_navigation"
            android:id="@+id/bottomNavigation"/>


    </LinearLayout>

</RelativeLayout>













